=facebook login + new major changes

--- a/public/src/app/forgotPassword/forgotPassword.less
+++ b/public/src/app/forgotPassword/forgotPassword.less
@@ -1,10 +1,5 @@
 .forgot-password-wrapper
 {
-  .title-wrapper
-  {
-
-  }
-
   .main-section
   {
     .email-login-wrapper,
@@ -12,6 +7,7 @@
     {
       display: inline-block;
       float: left;
+      border: none;
     }
 
     .social-login-wrapper
@@ -51,6 +47,17 @@
 
     .email-login-wrapper
     {
+      .required
+      {
+        .title-label
+        {
+          &:before
+          {
+            content: "*";
+            color: red;
+          }
+        }
+      }
       .submit-btn-wrapper
       {
         margin-left: 16px;
@@ -58,6 +65,36 @@
         {
           position: relative !important;
           padding: 6px 25px !important;
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
+
+  .main-section
+  {
+    .message-wrapper
+    {
+      .icon-wrapper
+      {
+        .size(128px, 128px);
+        background-size: 128px 128px;
+
+        &.success
+        {
+          background-image: url("images/success.png");
+        }
+      }
+
+      .text-wrapper
+      {
+        .title
+        {
+          font-size: 41px;
+        }
+        .text
+        {
+          font-size: 20px;
         }
       }
     }
