--- a/public/src/app/register/register.less
+++ b/public/src/app/register/register.less
@@ -17,6 +17,26 @@
       {
         margin-bottom: 20px;
       }
+
+      .required
+      {
+        .title-label
+        {
+          &:before
+          {
+            content: "*";
+            color: red;
+          }
+        }
+      }
+
+      .title-label
+      {
+        .error
+        {
+          color: @brand-danger;
+        }
+      }
     }
   }
 }
