--- a/public/src/app/forgotPassword/forgotPassword.tpl.html
+++ b/public/src/app/forgotPassword/forgotPassword.tpl.html
@@ -1,37 +1,56 @@
 <div class="login-block-wrapper forgot-password-wrapper container-fluid">
-    <div class="title-wrapper row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="title-header">Forgot your password?</div>
-            <div class="register-instruction">
-                <p>Enter your email in the next textbox. We'll email instructions on how to reset your password.</p>
-                <p>Back to <a href="#/login">Sign In.</a></p>
-            </div>
-        </div>
-    </div>
-
-    <div class="main-section row">
-        <div class="login-option-wrapper col-md-6 col-md-offset-3">
-            <div class="email-login-wrapper col-md-7">
-                <div class="control">
-                    <div class="title-label">
-                        EMAIL
-                    </div>
-                    <div>
-                        <input type="text" name="email" ng-model="userInput.email" required>
-                    </div>
-                </div>
-
-                <div class="control" p2l-disable-selection>
-                    <div class="submit-btn-wrapper">
-                        <button type="submit" class="btn submit btn-primary">SEND</button>
-                    </div>
+    <span ng-show="!passwordResetEmailSent">
+        <div class="title-wrapper row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="title-header">Forgot your password?</div>
+                <div class="register-instruction">
+                    <p>Enter your email in the next textbox. We'll email instructions on how to reset your password.</p>
+                    <p>Back to <a href="#!/login">Sign In.</a></p>
                 </div>
             </div>
-            <!--<div class="social-login-wrapper col-md-6">-->
-                <!--<div class="email-icon-wrapper">-->
-                    <!--<i class="email-icon"></i>-->
-                <!--</div>-->
-            <!--</div>-->
         </div>
-    </div>
+
+        <div class="main-section row">
+            <div class="login-option-wrapper col-md-6 col-md-offset-3">
+                <div class="email-login-wrapper col-md-7">
+                    <form name="resetPasswordForm" ng-submit="requestResetPassword()">
+                        <div class="control required">
+                            <div class="title-label">
+                                EMAIL
+                            </div>
+                            <div>
+                                <input type="email" name="email" ng-model="userInput.email" required>
+                            </div>
+                        </div>
+
+                        <div class="control" p2l-disable-selection>
+                            <div class="submit-btn-wrapper">
+                                <button type="submit" ng-disabled="!resetPasswordForm.$valid"
+                                        class="btn submit btn-primary">SEND</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </span>
+
+    <!--Email to reset password has been sent-->
+    <span ng-show="!!passwordResetEmailSent">
+       <div class="main-section row">
+           <div class="message-wrapper col-md-6 col-md-offset-3">
+               <div ng-show="!activationKey">
+                   <div class="icon-wrapper success"></div>
+
+                   <div class="text-wrapper">
+                       <div class="title">SUCCESS</div>
+                       <div class="text">
+                           An email has just been sent to your email address.
+                           Please check that email and follow the instruction to reset password of your email.
+                       </div>
+                   </div>
+               </div>
+            </div>
+        </div>
+    </span>
 </div>
