--- a/public/src/app/login/login.tpl.html
+++ b/public/src/app/login/login.tpl.html
@@ -4,7 +4,7 @@
            <div class="title-header">Sign In</div>
            <div class="register-instruction">
                <p>Use Facebook, Twitter or your email to sign in.</p>
-               <p>Don't have an account yet? <a href="#/register">Registering</a> is easy.</p>
+               <p>Don't have an account yet? <a href="#!/register">Registering</a> is easy.</p>
            </div>
        </div>
     </div>
@@ -12,7 +12,7 @@
     <div class="main-section row">
         <div class="login-option-wrapper col-md-6 col-md-offset-3">
             <div class="social-login-wrapper col-md-6">
-                <div class="facebook-login">
+                <div class="facebook-login" ng-click="loginFacebook()">
                     <i class="facebook-icon"></i>
                     <span class="text">Login with facebook</span>
                 </div>
@@ -31,7 +31,7 @@
                             EMAIL OR USERNAME
                         </div>
                         <div>
-                            <input type="text" name="username" ng-model="userInput.user" required>
+                            <input type="email" name="email" ng-model="userInput.email" required>
                         </div>
                     </div>
 
@@ -46,7 +46,7 @@
 
                     <div class="control row" p2l-disable-selection>
                         <div class="forgot-password-label col-md-6">
-                            <a href="#/forgotPassword">Forgot password?</a>
+                            <a href="#!/forgotPassword">Forgot password?</a>
                         </div>
                         <div class="submit-btn-wrapper col-md-6">
                             <button type="submit" class="btn submit btn-primary">Sign In</button>
