--- a/public/src/app/login/login.tpl.html
+++ b/public/src/app/login/login.tpl.html
@@ -17,7 +17,14 @@
                     <span class="text">Login with facebook</span>
                 </div>
 
-                <div class="twitter-login">
+                <div class="google-login" ng-click="loginGoogle()">
+                    <span class="google-icon-wrapper">
+                        <i class="fa fa-google-plus"></i>
+                    </span>
+                    <span class="text">Login with google</span>
+                </div>
+
+                <div class="twitter-login" ng-click="loginTwitter()" ng-show="0">
                     <i class="twitter-icon"></i>
                     <span class="text">Login with twitter</span>
                 </div>
