--- a/public/src/app/register/register.tpl.html
+++ b/public/src/app/register/register.tpl.html
@@ -17,7 +17,14 @@
                     <span class="text">Register with facebook</span>
                 </div>
 
-                <div class="twitter-login" ng-click="registerWithTwitter()">
+                <div class="google-login" ng-click="registerWithGoogle()">
+                    <span class="google-icon-wrapper">
+                        <i class="fa fa-google-plus"></i>
+                    </span>
+                    <span class="text">Register with google</span>
+                </div>
+
+                <div class="twitter-login" ng-click="registerWithTwitter()" ng-show="0">
                     <i class="twitter-icon"></i>
                     <span class="text">Register with twitter</span>
                 </div>
