--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -251,8 +251,12 @@ body
 @import '../app/resetPassword/resetPassword.less';
 
 //Common less
+@import './partials/_content.less';
 @import "./partials/_commons.less";
 @import './partials/_forms.less';
-@import './partials/_content.less';
+
+//vendor less
+@import './../../vendor/bootstrap-chosen/bootstrap-chosen.less';
+@import './../../vendor/css-toggle-switch/src/toggle-switch.less';
 
 
