--- a/public/src/less/partials/_forms.less
+++ b/public/src/less/partials/_forms.less
@@ -58,4 +58,96 @@ input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, in
   .box-shadow(none);
 }
 
+//choosen style reset
+.chosen-container-single
+{
+  .chosen-single
+  {
+    border-radius: @input-border-radius;
+    box-shadow: @chosen-box-shadow;
+    #gradient > .vertical(white, white) !important;
+    .box-shadow(rgba(0, 0, 0, 0.15) 0 1px 4px 1px inset);
+  }
+}
+
+@media only screen {
+  .custom-switch
+  {
+    background-color: #eee;
+    border-radius: 3px;
+    color: #333;
+    text-align: center;
+    *
+    {
+      outline: 0!important;
+    }
+
+    label
+    {
+      text-transform: uppercase;
+      font-weight: 400;
+      cursor: pointer;
+      .transition(#bbb 0.2s ease-out);
+    }
+
+    input:checked + label
+    {
+      color: white;
+    }
+
+    & > span
+    {
+      color: #666;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+
+    input:checked
+    {
+      ~ a
+      {
+        border: solid 1px @brand-success;
+        background-color: lighten(@brand-success,10%);
+        .box-shadow(@brand-success 0 -1px 0 inset);
+      }
+      ~ span span
+      {
+        &:first-of-type
+        {
+          color: white
+        }
+        &:last-of-type
+        {
+          color: #ccc
+        }
+      }
+    }
+
+    input
+    {
+      &:last-of-type:checked
+      {
+        ~ a
+        {
+          border: solid 1px @brand-danger;
+          background-color: lighten(@brand-danger,10%);
+          .box-shadow(@brand-danger 0 -1px 0 inset);
+        }
+      }
+
+      ~ span span
+      {
+        &:first-of-type
+        {
+          color: #ccc;
+        }
+        &:last-of-type
+        {
+          color: white;
+        }
+      }
+    }
+  }
+}
+
 
