=update useraccount page + form validation + active support

--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -249,6 +249,7 @@ body
 @import '../app/forgotPassword/forgotPassword.less';
 @import '../app/activateAccount/activateAccount.less';
 @import '../app/resetPassword/resetPassword.less';
+@import '../app/userAccount/userAccount.less';
 
 //Common less
 @import './partials/_content.less';
