--- a/public/src/app/userAccount/userAccount.tpl.html
+++ b/public/src/app/userAccount/userAccount.tpl.html
@@ -1,4 +1,4 @@
-<div class="content bootstrap">
+<div class="content bootstrap userAccountPage">
 <form id="user_form" class="userAccountForm form-horizontal"
       action=""
       method="post" enctype="multipart/form-data" novalidate="novalidate">
@@ -11,10 +11,10 @@
 </div>
 <div class="form-group">
     <label for="fullname" class="control-label col-lg-3 required">
-        FullName
+        Full Name
     </label>
     <div class="col-lg-9 ">
-        <input type="text" name="fullname" id="fullname" class="fixed-width-xxl" required="required">
+        <input type="text" name="fullname" id="fullname" class="fixed-width-xxl" ng-model='account.name' required="required">
     </div>
 </div>
 
@@ -27,7 +27,7 @@
         <div id="user-thumbnail">
             <img class="imgm img-thumbnail" alt="" src="http://lorempixel.com/96/96/people/9" width="96" height="96">
         </div>
-        <div class="alert alert-info">Your avatar should be 96x96. Alternative you can use your facebook and google profile avatar.
+        <div class="alert alert-info top7">Your avatar should be 96x96. Alternative you can use your facebook and google profile avatar.
             You can resize the avatar using our tool.
         </div>
     </div>
@@ -41,7 +41,9 @@
                <span class="input-group-addon">
                <i class="fa fa-envelope-o"></i>
                </span>
-            <input type="text" name="email" id="email" class="fixed-width-xxl form-control" autocomplete="off" required="required">
+            <input type="text" name="email" id="email" class="fixed-width-xxl form-control"
+                   ng-model='account.email' ng-disabled="true"
+                   autocomplete="off" required="required">
         </div>
     </div>
 </div>
@@ -51,30 +53,39 @@
     </label>
     <div class="col-lg-9 ">
         <div class="row">
-            <div class="col-lg-12">
-                <button type="button" id="passwd-btn-change" class="btn btn-default">
+            <div class="col-lg-12" ng-init="showChangePasswordForm = false;">
+                <button type="button" class="btn btn-default"
+                        ng-click="showChangePasswordForm = !showChangePasswordForm"
+                        ng-show="!showChangePasswordForm">
                     <i class="fa fa-lock"></i>
                     Change password...
                 </button>
-                <div class="form-password-change well hide">
-                    <div class="form-group">
+
+                <div class="form-password-change well" ng-show="showChangePasswordForm">
+                    <div class="form-group" ng-class="{'has-error': account.$errors.currentPassword}">
                         <label class="control-label col-lg-2 required">
                             Current password
                         </label>
                         <div class="col-lg-10">
                             <div class="input-group fixed-width-lg">
-                              <span class="input-group-addon">
-                              <i class="fa fa-unlock"></i>
-                              </span>
-                                <input type="password" class="form-control" required="required">
+                                <span class="input-group-addon"> <i class="fa fa-unlock"></i></span>
+                                <input type="password" ng-model="account.currentPassword"
+                                       ng-blur="account.validate('currentPassword')"
+                                       ng-change="account.validateIfErrored('currentPassword')"
+                                       class="form-control" required="required">
+                            </div>
+
+                            <!--Invalid Form-->
+                            <div class="text-danger top7" ng-show="account.$errors.currentPassword">
+                                {{account.$errors.currentPassword[0]}}
                             </div>
                         </div>
                     </div>
                     <hr>
-                    <div class="form-group">
+                    <div class="form-group" ng-class="{'has-error': account.$errors.newPassword}">
                         <label class="required control-label col-lg-2">
-                        <span class="label-tooltip" data-toggle="tooltip" data-html="true" title="" data-original-title="Minimum of 8 characters.">
-                        New password
+                        <span class="label-tooltip" data-toggle="tooltip" data-html="true" title="" data-original-title="Minimum of 6 characters.">
+                            New password
                         </span>
                         </label>
                         <div class="col-lg-9">
@@ -82,12 +93,19 @@
                               <span class="input-group-addon">
                               <i class="fa fa-key"></i>
                               </span>
-                                <input type="password" class="" value="" required="required">
+                                <input type="password" ng-model="account.newPassword"
+                                       ng-blur="account.validate('newPassword')"
+                                       ng-change="account.validateIfErrored('newPassword')">
                             </div>
-                            <span id="passwd-output"></span>
+                            <!--Invalid Password-->
+                            <div class="text-danger top7" ng-show="account.$errors.newPassword[0]">
+                                {{account.$errors.newPassword[0]}}
+                            </div>
+
+                            <!--<span id="passwd-output"></span>-->
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" ng-class="{'has-error': account.$errors.newPassword}">
                         <label class="required control-label col-lg-2">
                             Confirm password
                         </label>
@@ -96,15 +114,22 @@
                               <span class="input-group-addon">
                               <i class="fa fa-key"></i>
                               </span>
-                                <input type="password" class="" value="">
+                                <input type="password" ng-model="account.newPasswordConfirmation"
+                                       ng-blur="account.validate('newPassword')"
+                                       ng-change="account.validateIfErrored('newPassword')">
+                            </div>
+
+                            <!--Invalid Password Confirmation-->
+                            <div class="text-danger top7" ng-show="account.$errors.newPassword[1]">
+                                {{account.$errors.newPassword[1]}}
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10 col-lg-offset-2">
-                            <input type="text" class="form-control fixed-width-md pull-left" disabled="disabled">
-                            <button type="button" id="passwd-generate-btn" class="btn btn-default">
-                                <i class="icon-random"></i>
+                            <input type="text" class="generated-password form-control fixed-width-md pull-left">
+                            <button type="button" class="btn btn-default">
+                                <i class="fa fa-random"></i>
                                 Generate password
                             </button>
                         </div>
@@ -113,7 +138,7 @@
                         <div class="col-lg-10 col-lg-offset-2">
                             <p class="checkbox">
                                 <label>
-                                    <input name="passwd_send_email" type="checkbox" checked="checked">
+                                    <input type="checkbox" ng-model="account.sendEmailNewPassword">
                                     Send me this new password by Email
                                 </label>
                             </p>
@@ -121,9 +146,17 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <button type="button" id="passwd-cancel-btn" class="btn btn-default">
-                                <i class="icon-remove"></i>
+                            <button type="button"
+                                    ng-click="showChangePasswordForm = !showChangePasswordForm"
+                                    class="btn btn-default">
+                                <i class="fa fa-times"></i>
                                 Cancel
+                            </button>
+
+                            <button type="button" class="btn btn-default pull-right"
+                                    ng-click="showChangePasswordForm = !showChangePasswordForm">
+                                <i class="fa fa-floppy-o"></i>
+                                Save
                             </button>
                         </div>
                     </div>
@@ -134,20 +167,20 @@
 </div>
 <div class="form-group">
     <label class="control-label col-lg-3 ">
-         <span class="label-tooltip" data-toggle="tooltip" data-html="true" title="">Email Subscribe</span>
+        <span class="label-tooltip" data-toggle="tooltip" data-html="true" title="">Email Subscribe</span>
     </label>
     <div class="col-lg-9 ">
-            <span class="switch switch-toggle custom-switch fixed-width-lg">
-                <input type="radio" value="1" checked="checked">
-                <label>
-                    Yes
-                </label>
-                <input type="radio" value="0">
-                <label>
-                    No
-                </label>
-                <a class="slide-button btn"></a>
-            </span>
+        <span class="switch switch-toggle custom-switch fixed-width-lg">
+            <input type="radio" value="1" checked="checked">
+            <label>
+                Yes
+            </label>
+            <input type="radio" value="0">
+            <label>
+                No
+            </label>
+            <a class="slide-button btn"></a>
+        </span>
     </div>
 </div>
 
