--- a/public/src/less/partials/_commons.less
+++ b/public/src/less/partials/_commons.less
@@ -26,3 +26,11 @@
 {
   width: 250px!important;
 }
+
+//margin-top convenience class
+.top5 { margin-top:5px; }
+.top7 { margin-top:7px; }
+.top10 { margin-top:10px; }
+.top15 { margin-top:15px; }
+.top17 { margin-top:17px; }
+.top30 { margin-top:30px; }
