--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -99,6 +99,8 @@ body
 
 .main-navbar
 {
+  margin-bottom: 0px;
+
   .navbar-header
   {
     .navbar-brand
@@ -232,6 +234,22 @@ body
           }
         }
       }
+    }
+  }
+}
+
+.main-page-notification
+{
+  width: 100%;
+
+  .troposphere-popup-wrapper
+  {
+    margin-left: 13px;
+    margin-right: 13px;
+
+    .notification-popup-wrapper
+    {
+      position: relative;
     }
   }
 }
