--- a/public/src/less/main.less
+++ b/public/src/less/main.less
@@ -273,6 +273,8 @@ body
 @import './partials/_content.less';
 @import "./partials/_commons.less";
 @import './partials/_forms.less';
+@import './partials/_table.less';
+
 
 //vendor less
 @import './../../vendor/bootstrap-chosen/bootstrap-chosen.less';
