--- a/public/src/less/partials/_content.less
+++ b/public/src/less/partials/_content.less
@@ -66,9 +66,12 @@
   }
 }
 
-input[type="text"],input[type="search"],input[type="password"], textarea, select
+.bootstrap
 {
-  &:extend(.form-control all);
+  input[type="text"],input[type="search"],input[type="password"], textarea, select
+  {
+    &:extend(.form-control all);
+  }
 }
 
 
